[package]
name = "interva"
version = "0.1.1"
edition = "2021"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "A feature-rich crate for handling intervals."
documentation = "https://github.com/misaka10987/interva"
homepage = "https://github.com/misaka10987/interva"
repository = "https://github.com/misaka10987/interva"
readme = "README.md"
keywords = ["interval","math"]
license = "MIT"

[dependencies]
serde = { version = "1.0.203", features = ["derive"], optional = true }
